done pricing section

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <section class="skills__card listening">
                     <img src="./img/Podcast audience-bro 1.png" alt="Listening people" class="listening__img">
                     <div>
-                        <h3 class="skills-title">Listening</h3>
+                        <h3 class="sections-title">Listening</h3>
                         <p class="p">
                             Here you can find activities to practise
                             your listening skills. Listening will help you
@@ -120,6 +120,70 @@
                 </section>
             </aside>
         </article>
+<!--pricing-->
+<article class="pricing container">
+    <!--1-card-->
+    <h2 class="title-articles pricing__title">Pricing</h2>
+    <img src="./img/Online test-bro 1.png" alt="Online test" class="pricing-img__self-study">
+    <h3 class="sections-title title__self-study">Self-study online course</h3>
+    <p class="p p____self-study">
+        Start learning English online in live classes
+        with qualified EC teachers and students 
+        from all over the world.
+    </p>
+    <div class="price-wrapper__self-study">
+        <p class="p-price"><span class="price" >£5.99</span>per month</p>
+    </div>
+    <!--2-card-->
+    <img src="./img/Lesson-bro 1.png" alt="teacher" class="pricing-img__online-classes">
+    <h3 class="sections-title title__online-classes">Live online classes</h3>
+    <p class="p p__online-classes">
+        Interactive group classes with expert
+        teachers. Free 7-day trial</p>
+    <div class="price-wrapper__online-classes">
+        <p class="p-price"><span class="price" > £12.99</span>per month</p>
+    </div>
+    <!--3-card-->
+    <img src="./img/Webinar-bro 2.png" alt="Webinar" class="pricing-img__personal-tuition">
+    <h3 class="sections-title title__personal-tuition">Personal Tuition</h3>
+    <p class="p p__personal-tuition">
+        Online one-to-one English tutoring – enjoy
+        our first session for only $1
+    </p>
+    <div class="price-wrapper__personal-tuition">
+        <p class="p-price"><span class="price" >£5.99</span>per month</p>
+    </div>
+</article>
+        <!--<article class="pricing container">
+            <h2 class="title-articles pricing__title-articles_centr">Pricing</h2>
+            <section class="pricing__card">
+                <img src="./img/Online test-bro 1.png" alt="Online test" class="pricing__img">
+                <h3 class="sections-title">Self-study online course</h3>
+                <p class="p">
+                    Start learning English online in live classes
+                    with qualified EC teachers and students 
+                    from all over the world.
+                </p>
+                <p class="p-price"><span class="price" >£5.99</span>per month</p>
+            </section>
+            <section class="pricing__card">
+                <img src="./img/Lesson-bro 1.png" alt="teacher" class="pricing__img">
+                <h3 class="sections-title">Live online classes</h3>
+                <p class="p">
+                    Interactive group classes with expert
+                    teachers. Free 7-day trial</p>
+                <p class="p-price"><span class="price" > £12.99</span>per month</p>
+            </section>
+            <section class="pricing__card">
+                <img src="./img/Webinar-bro 2.png" alt="Webinar">
+                <h3 class="sections-title">Personal Tuition</h3>
+                <p class="p">
+                    Online one-to-one English tutoring – enjoy
+                    our first session for only $1
+                </p>
+                <p class="p-price"><span class="price" >£5.99</span>per month</p>
+            </section>
+        </article>-->
     </main>
 </body>
 </html>
