--- a/index.html
+++ b/index.html
@@ -184,6 +184,16 @@
                 <p class="p-price"><span class="price" >£5.99</span>per month</p>
             </section>
         </article>-->
+        <article class="contact-us">
+            <img src="./img/Ресурс 1 1.png" alt="hapy human">
+            <h2>Contact Us</h2>
+            <p>
+                Discover your current English level by taking our free online English test.Sign up to our newsletter for learning
+                tips and free resources
+            </p>
+            <input type="email" name="email" placeholder="Enter Your E-mail">
+            <input type="submit" value="Submit">
+        </article>
     </main>
 </body>
 </html>
