add contact-us-section with flex

--- a/index.html
+++ b/index.html
@@ -184,15 +184,22 @@
                 <p class="p-price"><span class="price" >£5.99</span>per month</p>
             </section>
         </article>-->
-        <article class="contact-us">
-            <img src="./img/Ресурс 1 1.png" alt="hapy human">
-            <h2>Contact Us</h2>
-            <p>
-                Discover your current English level by taking our free online English test.Sign up to our newsletter for learning
-                tips and free resources
-            </p>
-            <input type="email" name="email" placeholder="Enter Your E-mail">
-            <input type="submit" value="Submit">
+<!--contact-us-->
+        <article class="contact-us container">
+            <img src="./img/Ресурс 1 1.png" alt="hapy human" class="contact-us__img">
+            <section class="contact-us__section">
+                <h2 class="sections-title">Contact Us</h2>
+                <img src="./img/Ресурс 1 1.png" alt="hapy human" class="contact-us__img-adaptiv">
+                <p class="p">
+                    Discover your current English level by taking our free online English test.Sign up to our newsletter for learning
+                    tips and free resources
+                </p>
+                <div class="form">
+                    <input type="email" name="email" placeholder="Enter Your E-mail" class="form__input">
+                    <input type="submit" value="Subscribe" class="form__submit">
+                </div>
+            </section>
+        </section>
         </article>
     </main>
 </body>
