--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <a href="" class="skill-card__button">Learn more</a>
                 </section>
                 <section class="skills__card reading">
-                    <img src="./img/House bookshelves-bro 1.png" alt="bookshelves">
+                    <img src="./img/House bookshelves-bro 1.png" alt="bookshelves" class="bookshelves">
                     <h3 class="skills-title">Reading</h3>
                     <p class="p">
                         perception and response actions of the user
@@ -121,39 +121,39 @@
             </aside>
         </article>
 <!--pricing-->
-<article class="pricing container">
-    <!--1-card-->
-    <h2 class="title-articles pricing__title">Pricing</h2>
-    <img src="./img/Online test-bro 1.png" alt="Online test" class="pricing-img__self-study">
-    <h3 class="sections-title title__self-study">Self-study online course</h3>
-    <p class="p p____self-study">
-        Start learning English online in live classes
-        with qualified EC teachers and students 
-        from all over the world.
-    </p>
-    <div class="price-wrapper__self-study">
-        <p class="p-price"><span class="price" >£5.99</span>per month</p>
-    </div>
-    <!--2-card-->
-    <img src="./img/Lesson-bro 1.png" alt="teacher" class="pricing-img__online-classes">
-    <h3 class="sections-title title__online-classes">Live online classes</h3>
-    <p class="p p__online-classes">
-        Interactive group classes with expert
-        teachers. Free 7-day trial</p>
-    <div class="price-wrapper__online-classes">
-        <p class="p-price"><span class="price" > £12.99</span>per month</p>
-    </div>
-    <!--3-card-->
-    <img src="./img/Webinar-bro 2.png" alt="Webinar" class="pricing-img__personal-tuition">
-    <h3 class="sections-title title__personal-tuition">Personal Tuition</h3>
-    <p class="p p__personal-tuition">
-        Online one-to-one English tutoring – enjoy
-        our first session for only $1
-    </p>
-    <div class="price-wrapper__personal-tuition">
-        <p class="p-price"><span class="price" >£5.99</span>per month</p>
-    </div>
-</article>
+        <article class="pricing container">
+            <!--1-card-->
+            <h2 class="title-articles pricing__title">Pricing</h2>
+            <img src="./img/Online test-bro 1.png" alt="Online test" class="pricing-img__self-study">
+            <h3 class="sections-title title__self-study">Self-study online course</h3>
+            <p class="p p____self-study">
+                Start learning English online in live classes
+                with qualified EC teachers and students 
+                from all over the world.
+            </p>
+            <div class="price-wrapper__self-study">
+                <p class="p-price"><span class="price" >£5.99</span>per month</p>
+            </div>
+            <!--2-card-->
+            <img src="./img/Lesson-bro 1.png" alt="teacher" class="pricing-img__online-classes">
+            <h3 class="sections-title title__online-classes">Live online classes</h3>
+            <p class="p p__online-classes">
+                Interactive group classes with expert
+                teachers. Free 7-day trial</p>
+            <div class="price-wrapper__online-classes">
+                <p class="p-price"><span class="price" > £12.99</span>per month</p>
+            </div>
+            <!--3-card-->
+            <img src="./img/Webinar-bro 2.png" alt="Webinar" class="pricing-img__personal-tuition">
+            <h3 class="sections-title title__personal-tuition">Personal Tuition</h3>
+            <p class="p p__personal-tuition">
+                Online one-to-one English tutoring – enjoy
+                our first session for only $1
+            </p>
+            <div class="price-wrapper__personal-tuition">
+                <p class="p-price"><span class="price" >£5.99</span>per month</p>
+            </div>
+        </article>
         <!--<article class="pricing container">
             <h2 class="title-articles pricing__title-articles_centr">Pricing</h2>
             <section class="pricing__card">
@@ -199,8 +199,16 @@
                     <input type="submit" value="Subscribe" class="form__submit">
                 </div>
             </section>
-        </section>
         </article>
     </main>
+<!--foorer-->
+    <footer class="footer container">
+        <p class="logo">Brit<span class="logo_half">lex</span></p>
+        <ul class="footer__menu">
+            <li class="footer__menu-li"><a href="" class="footer__menu-link">Terms and Conditions</a></li>
+            <li class="footer__menu-li"><a href="" class="footer__menu-link">Privacy Policy</a></li>
+            <li class="footer__menu-li"><a href="" class="footer__menu-link">Cookie Policy</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
